--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -7,8 +7,8 @@
     width: 100%;
     max-width: 300px;
     height: auto;
-
     border-radius: 30px;
+    
 }
 .project-box{
     text-align: center;
@@ -37,4 +37,9 @@
 .project-link:hover {
     background: rgb(98, 0, 238);
     box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+}
+.project-title{
+    font-weight: 400;
+    font-size: 1.7rem;
+    line-height: 2;
 }
